// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render a checkbox partially checked 1`] = `
.glamor-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  width: 14px;
  height: 14px;
}

.glamor-2 {
  display: inline-block;
  vertical-align: bottom;
  display: inline-block;
  vertical-align: bottom;
  margin-left: 10px;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 14px;
}

.glamor-2:hover {
  text-decoration: inherit;
}

.glamor-2 strong {
  font-weight: 500;
}

<div
  className="glamor-3 root"
  name={undefined}
  onClick={undefined}
  style={Object {}}
>
  .glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  width: 14px;
  height: 14px;
}

<div
    className="glamor-0 checkbox indeterminate"
    style={Object {}}
  />
  .glamor-1 {
  display: inline-block;
  vertical-align: bottom;
  display: inline-block;
  vertical-align: bottom;
  margin-left: 10px;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 14px;
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<span
    align="initial"
    className="glamor-0 glamor-1"
    color="grey"
    hoverColor="none"
    href={undefined}
    interactive={undefined}
    multiline={undefined}
    name={undefined}
    notInteractive={undefined}
    onClick={undefined}
    size="small"
    style={Object {}}
    target={undefined}
    weight="light"
  >
    A checkbox label
  </span>
</div>
`;

exports[`Checkbox should render a checkbox with label 1`] = `
.glamor-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  width: 14px;
  height: 14px;
}

.glamor-2 {
  display: inline-block;
  vertical-align: bottom;
  display: inline-block;
  vertical-align: bottom;
  margin-left: 10px;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 14px;
}

.glamor-2:hover {
  text-decoration: inherit;
}

.glamor-2 strong {
  font-weight: 500;
}

<div
  className="glamor-3 root"
  name={undefined}
  onClick={undefined}
  style={Object {}}
>
  .glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  width: 14px;
  height: 14px;
}

<div
    className="glamor-0 checkbox checked"
    style={Object {}}
  />
  .glamor-1 {
  display: inline-block;
  vertical-align: bottom;
  display: inline-block;
  vertical-align: bottom;
  margin-left: 10px;
  font-family: 'WebFaktSoftPro',sans-serif;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  cursor: inherit;
  vertical-align: middle;
  text-align: initial;
  text-decoration: inherit;
  font-weight: 300;
  font-size: 14px;
}

.glamor-1:hover {
  text-decoration: inherit;
}

.glamor-1 strong {
  font-weight: 500;
}

<span
    align="initial"
    className="glamor-0 glamor-1"
    color="grey"
    hoverColor="none"
    href={undefined}
    interactive={undefined}
    multiline={undefined}
    name={undefined}
    notInteractive={undefined}
    onClick={undefined}
    size="small"
    style={Object {}}
    target={undefined}
    weight="light"
  >
    A checkbox label
  </span>
</div>
`;

exports[`Checkbox should render shallow component ok 1`] = `
.glamor-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  width: 14px;
  height: 14px;
}

<div
  className="glamor-1 root"
  name={undefined}
  onClick={undefined}
  style={Object {}}
>
  .glamor-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: relative;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  width: 14px;
  height: 14px;
}

<div
    className="glamor-0 checkbox checked"
    style={Object {}}
  />
</div>
`;
